[package]
name = "xemu"
description = "RISC-V Toolchain And Emulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xemu"
path = "src/main.rs"

[[test]]
name = "lexer"
path = "tests/lexer.rs"

[[test]]
name = "assembler"
path = "tests/assembler.rs"

[dependencies]
regex = "1"
bitflags = "1.3"
lazy_static = "1.4"