[package]
    name = "aem"
    description = "RISC-V Assembler And Emulator"
    version = "0.1.0"
    edition = "2021"

[[bin]]
    name = "aem"
    path = "src/main.rs"

[[test]]
    name = "lexer"
    path = "tests/lexer.rs"

[[test]]
    name = "asm"
    path = "tests/asm.rs"

[dependencies]
    regex = "1.10.2"
    bitflags = "2.4.1"
    num-traits = "0.2.7"
    lazy_static = "1.4.0"